# SixthSense-QualcommxMeta

./: .gitignore  CLAUDE.md  DEMO.md  LICENSE  README.md
.github/extensions/belt-tuning/: belt-math.mjs  extension.mjs
android/app/: build.gradle.kts
android/app/src/debug/: AndroidManifest.xml
android/app/src/debug/java/com/sixthsense/debug/: DebugReceiver.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sixthsense/: MainActivity.kt
android/app/src/main/java/com/sixthsense/ble/: BeltClient.kt  BeltController.kt
android/app/src/main/java/com/sixthsense/core/: BeltMapper.kt  SceneState.kt
android/app/src/main/java/com/sixthsense/debug/: AppGraph.kt
android/app/src/main/java/com/sixthsense/haptics/: DirectionalEncoding.kt  PhoneHapticsActuator.kt  PhoneHapticsController.kt
android/app/src/main/res/values/: strings.xml
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  mockFrames.json  styles.css
docs/: PROMPT_ondevice_vision_phone_haptics.md  android_debug_receiver_snippet.md  demo_script.md  galaxy_s25_mac_setup.md  hybrid_aihub_litert_executorch.md  mcp_test_checklist.md  model_export_plan.md  ondevice_vision_and_phone_haptics.md  project_context.md  risk_register.md
firmware/esp32_belt/: README.md  esp32_belt.ino
live-dashboard/: README.md  app.js  index.html  styles.css
live-dashboard/dev/: fake-phone.mjs
mcp/: README.md  pyproject.toml  sixthsense_mcp.py
scripts/: adb_common.sh  dashboard.sh  demo.sh  setup_litert_npu.sh  setup_mcp.sh  setup_qnn_backend.sh  verify_android_env.sh
(+18 files in other folders)
